# 2023_dior_hackathon

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: cli.py
src/settings/: __init__.py
src/settings/config/: settings.conf
