[tool.poetry]
name = "2023-lvmh-hackathon"
version = "0.1.0"
description = ""
authors = ["Francois CULIERE <fculiere_ext@christiandior.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = ">=1.5.3"
scikit-learn = "^1.2.1"
statsmodels = ">=0.13.5"
duckdb = "^0.8.1"
jupytext = "^1.14.7"
typer = "^0.9.0"
pyhocon = "^0.3.60"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
plotly = "^5.13.1"
seaborn = "^0.12.2"
pre-commit = "^3.3.3"

[[tool.poetry.source]]
name = "aifactory"
url = "https://pkgs.dev.azure.com/Christian-Dior/e93e16e3-116f-4b44-a461-bf40ec428317/_packaging/CDC.pypi/pypi/simple/"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
recommend = "src.cli:cli"
